syntax = "proto3";

option csharp_namespace = "Shared.Protos";

message EmptyRequest{
}